--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+bidict==0.21.4
 cffi==1.15.0
 click==8.0.3
 cryptography==36.0.0
 Flask==2.0.2
+Flask-SocketIO==5.1.1
+gevent==21.8.0
+gevent-websocket==0.10.1
+greenlet==1.1.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 pycparser==2.21
 pyOpenSSL==21.0.0
+python-engineio==4.3.0
+python-socketio==5.5.0
 six==1.16.0
 Werkzeug==2.0.2
+zope.event==4.5.0
+zope.interface==5.4.0
