--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
+alembic==1.7.5
 bidict==0.21.4
+blinker==1.4
 cffi==1.15.0
 click==8.0.3
 cryptography==36.0.0
+dnspython==2.1.0
+eventlet==0.33.0
 Flask==2.0.2
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
 Flask-SocketIO==5.1.1
-gevent==21.8.0
-gevent-websocket==0.10.1
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.0.1
 pycparser==2.21
+PyJWT==2.3.0
 pyOpenSSL==21.0.0
+python-dotenv==0.19.2
 python-engineio==4.3.0
 python-socketio==5.5.0
 six==1.16.0
+SQLAlchemy==1.4.28
 Werkzeug==2.0.2
 zope.event==4.5.0
 zope.interface==5.4.0
